     [serverloop.c]
     remove unused debug
   - markus@cvs.openbsd.org 2002/03/24 16:01:13
     [packet.c]
     debug->debug3 for extra padding
   - stevesk@cvs.openbsd.org 2002/03/24 17:27:03
     [kexgex.c]
     typo; ok markus@
   - stevesk@cvs.openbsd.org 2002/03/24 17:53:16
     [monitor_fdpass.c]
     minor cleanup and more error checking; ok markus@

20020324
 - (stevesk) [session.c] disable LOGIN_NEEDS_TERM until we are sure
   it can be removed. only used on solaris. will no longer compile with
   privsep shuffling.

20020322
 - (stevesk) HAVE_ACCRIGHTS_IN_MSGHDR configure support
 - (stevesk) [monitor.c monitor_wrap.c] #ifdef HAVE_PW_CLASS_IN_PASSWD
 - (stevesk) configure and cpp __FUNCTION__ gymnastics to handle nielsisms
 - (stevesk) [monitor_fdpass.c] support for access rights style file
   descriptor passing
 - (stevesk) [auth2.c] merge cleanup/sync
 - (stevesk) [defines.h] hp-ux 11 has ancillary data style fd passing, but
   is missing CMSG_LEN() and CMSG_SPACE() macros.
 - (stevesk) [defines.h] #define MAP_ANON MAP_ANONYMOUS for HP-UX; other
   platforms may need this--I'm not sure.  mmap() issues will need to be
   addressed further.
 - (tim) [cipher.c] fix problem with OpenBSD sync
 - (stevesk) [LICENCE] OpenBSD sync

20020321
 - (bal) OpenBSD CVS Sync
   - itojun@cvs.openbsd.org 2002/03/08 06:10:16
     [sftp-client.c]
     printf type mismatch
   - itojun@cvs.openbsd.org 2002/03/11 03:18:49
     [sftp-client.c]
     correct type mismatches (u_int64_t != unsigned long long)
   - itojun@cvs.openbsd.org 2002/03/11 03:19:53
     [sftp-client.c]
     indent
   - markus@cvs.openbsd.org 2002/03/14 15:24:27
     [sshconnect1.c]
     don't trust size sent by (rogue) server; noted by s.esser@e-matters.de
   - markus@cvs.openbsd.org 2002/03/14 16:38:26
     [sshd.c]
     split out ssh1 session key decryption; ok provos@
   - markus@cvs.openbsd.org 2002/03/14 16:56:33
     [auth-rh-rsa.c auth-rsa.c auth.h]